Fixed Alignment on Home Page

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,15 @@
  * Style Overrides
  * 
  */
+@import url(http://fonts.googleapis.com/css?family=Prata);
+ 
+body{
+	font-size: 1.7em;
+	font-family: 'Prata', serif;
+}
+p , h1, h2, h3, h4, h5, h6{
+	font-family: 'Prata', serif;
+}
 .navmenu-default {
 	background-color:#009587;	
 }
@@ -18,9 +27,9 @@
 }
 #home-bg.bg-1{
 		background-image: url('../assets/bg-01.jpg'),
-		url('../assets/bg-02.jpg');
-		background-position-x:  50%, 50%;
-		background-position-y:  0px, 1600px;
+		url('../assets/bg-02.jpg'),
+		url('../assets/bg-03.jpg');
+		background-position:  0 0px, 0 1600px,0 3200px;
 }
 
 button.navbar.navbar-default.navbar{
@@ -29,10 +38,43 @@ button.navbar.navbar-default.navbar{
 	}
 	
 a.logo>img{
-	max-height:60px;
+	max-height:50px;
 }
 
-.navbar-header{
-		width:100%;
-		
+.navbar-offcanvas{
+	background-color:#009587 !important;
+	border-color: rgba(231, 231, 231, 0) !important;
+}
+.main-container{
+	padding-top:100px;
+	}
+.navbar{
+	margin-top: 50px;
+	max-height:50px;
+	z-index: 1;
 }		
+.navbar-nav>li>a{
+	padding-top:15px !important;
+	padding-bottom:15px !important;
+}
+
+.region.region-content{ 
+	padding-top:45px;		
+}
+
+.hp-content{
+	
+}
+
+.ct-pos-1{
+	position:absolute;
+	top:200px;
+}
+.ct-pos-2{
+position:absolute;
+	top:1400px;
+}
+.ct-pos-3{
+position:absolute;
+	top:0;
+}			
